--- a/css/styles.css
+++ b/css/styles.css
@@ -43,14 +43,13 @@ nav ul{
     list-style: none;
     overflow: hidden;
     display: flex;
-    flex-direction: ;  /* Cambia a una disposición vertical en versiones móviles */
     width: 100%;
 }
 
 nav ul li{
     float: none;
     font-size: 20px;
-    margin-bottom: 5px;  /* Espacio entre elementos en versiones móviles */
+    margin-bottom: 5px;  
 
 }
 
@@ -386,7 +385,7 @@ footer img:hover{
     .menu-icon {
         display: block;
         padding: 20px;
-        order: -1;  /* Mueve el icono del menú arriba */
+        order: -1;  
     }
 
     header {
@@ -448,6 +447,44 @@ footer img:hover{
 
     .container_2_caja {
         width: 100%;
+        height: 20%;
+        background-color: #326273;
+    }
+
+    .container_2_cajaproyectos {
+        padding-top: 10px;
+        flex-direction: column;
+        align-items: center;     
+    }
+
+    .container_2_fila_1,
+    .container_2_fila_2 {
+        flex-direction: column;  
+        align-items: center;     
+    }
+
+    .proyecto1{
+        background-image: none;
+    }
+
+    .proyecto2{
+        background-image: none;
+    }
+
+    .proyecto3{
+        background-image: none;
+    }
+
+    .proyecto4{
+        background-image: none;
+    }
+
+    .proyecto5{
+        background-image: none;
+    }
+
+    .proyecto6{
+        background-image: none;
     }
 
     .container_3 {
