--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,10 @@ header{
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 
+header h1{
+    margin-left: 30px;
+}
+
 .menu-icon {
     display: none;
     cursor: pointer;
@@ -43,10 +47,15 @@ a:hover{
     color: #E39774;
 }
 
+nav{
+    width: 700px;
+}
+
 nav ul{
     list-style: none;
     overflow: hidden;
     display: flex;
+    justify-content: space-around;
     width: 100%;
 }
 
@@ -387,9 +396,10 @@ footer img:hover{
 
 @media screen and (max-width: 768px) {
     .menu-icon {
-        display: block;
+        display: flex;
+        width: auto;
         padding: 20px;
-        order: -1;  
+        
     }
 
     header {
@@ -422,6 +432,7 @@ footer img:hover{
     }
 
     .container_1_seccion_1{
+        padding: 20px;
         width: 100%;
         
     }
@@ -450,6 +461,7 @@ footer img:hover{
     }
 
     .container_2_caja {
+        margin-top: 20px;
         width: 100%;
         height: 20%;
         background-color: #326273;
