--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 div[id]{
@@ -253,6 +253,8 @@ ul li img{
 
 .container_3_caja_contenidos{
     height: 668px;
+    padding-left: 200px;
+    padding-right: 200px;
     margin-top: 40px;
 }
 
@@ -532,6 +534,14 @@ footer img:hover{
     .container_3 {
         height: 1000px;
     }
+
+    .container_3_caja_contenidos{
+        height: 668px;
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-top: 40px;
+    }
+    
 
     .container_3_pestanas{
         flex-wrap: wrap;
